--- a/2018_nips_vigil_poster/main.tex
+++ b/2018_nips_vigil_poster/main.tex
@@ -99,7 +99,7 @@
   }
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\headerbox{Summary}{name=summary,column=0,row=0}{
+\headerbox{Contributions}{name=contributions,column=0,row=0}{
 \begin{itemize}
 	\compresslist
 	\item[$\bullet$] We introduce a \emph{\textbf{simplified}} variant of the MAC model~\cite{hudson2018compositional}, which achieves comparable accuracy while training \emph{\textbf{faster}}.
@@ -110,7 +110,7 @@
 
 } %headerbox
 
-\headerbox{The MAC Model ~\cite{hudson2018compositional}}{name=mac-model, column=0, below=summary}{
+\headerbox{The MAC Model ~\cite{hudson2018compositional}}{name=mac-model, column=0, below=contributions}{
 	\vspace{-10pt}
 	\begin{figure}[H]
 		\centering
