Increased size of Fig. 3.

--- a/2018_nips_vigil_poster/main.tex
+++ b/2018_nips_vigil_poster/main.tex
@@ -245,7 +245,7 @@
 	\vspace{-10pt}
 	\begin{figure}[H]
 		\includegraphics[width=0.4\textwidth]{../img/teaser.jpg}
-		\caption{\textit{How many objects are either small cylinders or red things?} -- Answer: 5.}
+		\caption{\textbf{Q}: \textit{How many objects are either small cylinders or red things?} -- \textbf{A}: 5.}
 		\label{fig:clevr_task}
 	\end{figure}
 	\vspace{-20pt}
@@ -333,7 +333,7 @@
 \headerbox{Compositional generalization of the MAC model}{name=mac-failures, column=1, below=experiments}{
 	\vspace{-10pt}
 	\begin{figure}[H]
-		\includegraphics[width=0.60\textwidth]{../img/fail_mac_cogent_b_shape.png}
+		\includegraphics[width=0.71\textwidth]{../img/fail_mac_cogent_b_shape.png}
 		\caption{There is a large gray thing that is on the right side of the big gray cylinder left of the large ball that is on the right side if the cyan rubber sphere; what is its shape?}
 		\label{fig:mac_failure}
 	\end{figure}
