Emphasize some terms in the Summary.

--- a/2018_nips_vigil_poster/main.tex
+++ b/2018_nips_vigil_poster/main.tex
@@ -101,8 +101,8 @@
 \begin{itemize}
 	\compresslist
 	\item[$\bullet$] We introduce a \emph{\textbf{simplified}} variant of the MAC model~\cite{hudson2018compositional}, which achieves comparable accuracy while training \emph{\textbf{faster}}.
-	\item[$\bullet$] We evaluate the MAC model and the simplified variant on CLEVR \& CoGenT, and show that, \emph{\textbf{transfer learning with fine-tuning}} results in a 15 point increase in accuracy, matching the state of the art.
-	\item[$\bullet$] We also demonstrate that \emph{\textbf{improper}} fine-tuning can reduce a model's accuracy.
+	\item[$\bullet$] We evaluate the MAC model and the simplified variant on CLEVR \& CoGenT, and show that, \emph{\textbf{transfer learning with fine-tuning}} results in a \emph{\textbf{15 point increase}} in accuracy, matching the state of the art.
+	\item[$\bullet$] We also demonstrate that \emph{\textbf{improper}} fine-tuning can \emph{\textbf{reduce a model's accuracy}}.
 	
 \end{itemize}
 
